# zk-storage-proof

./: Cargo.toml  README.md  demo_notes.txt
go-apps/: go.mod
go-apps/cmd/miner/: main.go
go-apps/cmd/publisher/: main.go
go-apps/sla/: storage.go  util.go
rust-phash/: Cargo.toml
rust-phash/src/: main.rs
src/: macroblock.rs  main.rs  mb_mse.rs  mb_ssim.rs  merkle_pot.rs  pixel.rs
viddec/: .cproject  .project  Makefile  extract-frame.cpp  gen-hash.c  gen-hash.cpp
