[package]
name = "rust-phash"
version = "0.1.0"
authors = ["rampenke <rampenke@liveplanet.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdct = "0.4.0"
rand = "0.7.0"
transpose = "0.2.0"
serde_cbor = "0.9.0"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1.0"
rustc-serialize = "0.3.24"